--- a/manual/emacspeak_002dpronounce.html
+++ b/manual/emacspeak_002dpronounce.html
@@ -223,8 +223,28 @@ Default is emacspeak-pronounce-dictionaries-file.
       </div>
     </dd>
   </dl><span id=
-  "emacspeak_002dpronounce_002drefresh_002dpronunciations"></span>
+  "emacspeak_002dpronounce_002dmerge_002ddictionaries"></span>
   <h4 class="subsubsection">12.148.1.8
+  emacspeak-pronounce-merge-dictionaries</h4>
+  <dl>
+    <dt id=
+    "index-emacspeak_002dpronounce_002dmerge_002ddictionaries">
+    Command:
+    <strong>emacspeak-pronounce-merge-dictionaries</strong>
+    <em>(from into)</em></dt>
+    <dd>
+      <span id=
+      "index-emacspeak_002dpronounce_002dmerge_002ddictionaries-1"></span>
+      <div class="format">
+        <pre class="format">Merge dic ‘from’ into dict ‘into’
+
+(fn FROM INTO)
+</pre>
+      </div>
+    </dd>
+  </dl><span id=
+  "emacspeak_002dpronounce_002drefresh_002dpronunciations"></span>
+  <h4 class="subsubsection">12.148.1.9
   emacspeak-pronounce-refresh-pronunciations</h4>
   <dl>
     <dt id=
@@ -243,7 +263,7 @@ Default is emacspeak-pronounce-dictionaries-file.
     </dd>
   </dl><span id=
   "emacspeak_002dpronounce_002dsave_002ddictionaries"></span>
-  <h4 class="subsubsection">12.148.1.9
+  <h4 class="subsubsection">12.148.1.10
   emacspeak-pronounce-save-dictionaries</h4>
   <dl>
     <dt id=
@@ -260,7 +280,7 @@ Default is emacspeak-pronounce-dictionaries-file.
     </dd>
   </dl><span id=
   "emacspeak_002dpronounce_002dtoggle_002duse_002dof_002ddictionaries"></span>
-  <h4 class="subsubsection">12.148.1.10
+  <h4 class="subsubsection">12.148.1.11
   emacspeak-pronounce-toggle-use-of-dictionaries</h4>
   <dl>
     <dt id=
@@ -281,7 +301,7 @@ Default is emacspeak-pronounce-dictionaries-file.
     </dd>
   </dl><span id=
   "emacspeak_002dpronounce_002dtoggle_002dvoice"></span>
-  <h4 class="subsubsection">12.148.1.11
+  <h4 class="subsubsection">12.148.1.12
   emacspeak-pronounce-toggle-voice</h4>
   <dl>
     <dt id="index-emacspeak_002dpronounce_002dtoggle_002dvoice">
@@ -298,7 +318,7 @@ Default is emacspeak-pronounce-dictionaries-file.
   </dl><span id="emacspeak_002dpronounce-Options"></span>
   <h4 class="subsection">12.148.2 emacspeak-pronounce Options</h4>
   <dl>
-    <dt id="index-User-Option-73">Variable: <strong>User
+    <dt id="index-User-Option-72">Variable: <strong>User
     Option</strong>
     <em>emacspeak-pronounce-common-xml-namespace-uri-pronunciations</em></dt>
     <dd>
@@ -306,7 +326,7 @@ Default is emacspeak-pronounce-dictionaries-file.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-74">Variable: <strong>User
+    <dt id="index-User-Option-73">Variable: <strong>User
     Option</strong>
     <em>emacspeak-pronounce-dictionaries-file</em></dt>
     <dd>
@@ -314,7 +334,7 @@ Default is emacspeak-pronounce-dictionaries-file.
     </dd>
   </dl>
   <dl>
-    <dt id="index-User-Option-75">Variable: <strong>User
+    <dt id="index-User-Option-74">Variable: <strong>User
     Option</strong>
     <em>emacspeak-pronounce-internet-smileys-pronunciations</em></dt>
     <dd>
