--- a/manual/index.html
+++ b/manual/index.html
@@ -53,7 +53,7 @@
   <h1 class="settitle c2">Emacspeak User’s Manual — 2nd
   Edition.</h1>
   <p>This manual documents <strong>Emacspeak, The Complete Audio
-  Desktop</strong> and was last updated on July 1,
+  Desktop</strong> and was last updated on July 2,
   2021.</p><span id="SEC_Overview"></span>
   <h2 class="shortcontents-heading">Short Table of Contents</h2>
   <div class="shortcontents">
@@ -6712,12 +6712,20 @@
                   12.148.1.7
                   emacspeak-pronounce-load-dictionaries</a></li>
                   <li><a id=
+                  "toc-emacspeak_002dpronounce_002dmerge_002ddictionaries"
+                  href=
+                  "emacspeak_002dpronounce.html#emacspeak_002dpronounce_002dmerge_002ddictionaries"
+                  name=
+                  "toc-emacspeak_002dpronounce_002dmerge_002ddictionaries">
+                  12.148.1.8
+                  emacspeak-pronounce-merge-dictionaries</a></li>
+                  <li><a id=
                   "toc-emacspeak_002dpronounce_002drefresh_002dpronunciations"
                   href=
                   "emacspeak_002dpronounce.html#emacspeak_002dpronounce_002drefresh_002dpronunciations"
                   name=
                   "toc-emacspeak_002dpronounce_002drefresh_002dpronunciations">
-                  12.148.1.8
+                  12.148.1.9
                   emacspeak-pronounce-refresh-pronunciations</a></li>
                   <li><a id=
                   "toc-emacspeak_002dpronounce_002dsave_002ddictionaries"
@@ -6725,7 +6733,7 @@
                   "emacspeak_002dpronounce.html#emacspeak_002dpronounce_002dsave_002ddictionaries"
                   name=
                   "toc-emacspeak_002dpronounce_002dsave_002ddictionaries">
-                  12.148.1.9
+                  12.148.1.10
                   emacspeak-pronounce-save-dictionaries</a></li>
                   <li><a id=
                   "toc-emacspeak_002dpronounce_002dtoggle_002duse_002dof_002ddictionaries"
@@ -6733,7 +6741,7 @@
                   "emacspeak_002dpronounce.html#emacspeak_002dpronounce_002dtoggle_002duse_002dof_002ddictionaries"
                   name=
                   "toc-emacspeak_002dpronounce_002dtoggle_002duse_002dof_002ddictionaries">
-                  12.148.1.10
+                  12.148.1.11
                   emacspeak-pronounce-toggle-use-of-dictionaries</a></li>
                   <li><a id=
                   "toc-emacspeak_002dpronounce_002dtoggle_002dvoice"
@@ -6741,7 +6749,7 @@
                   "emacspeak_002dpronounce.html#emacspeak_002dpronounce_002dtoggle_002dvoice"
                   name=
                   "toc-emacspeak_002dpronounce_002dtoggle_002dvoice">
-                  12.148.1.11
+                  12.148.1.12
                   emacspeak-pronounce-toggle-voice</a></li>
                 </ul>
               </li>
