--- a/manual/emacspeak_002dorg.html
+++ b/manual/emacspeak_002dorg.html
@@ -77,7 +77,8 @@
   emacspeak-org-capture-link</h4>
   <dl>
     <dt id="index-emacspeak_002dorg_002dcapture_002dlink">Command:
-    <strong>emacspeak-org-capture-link</strong></dt>
+    <strong>emacspeak-org-capture-link</strong> <em>(&amp;optional
+    open)</em></dt>
     <dd>
       <dl compact="compact">
         <dt><kbd>C-; h</kbd></dt>
@@ -88,8 +89,12 @@
       "index-emacspeak_002dorg_002dcapture_002dlink-1"></span>
       <div class="format">
         <pre class="format">Capture hyperlink to current context.
-To use this command, first  do ‘customize-variable’ ‘org-capture-template’
-and assign  letter ‘h’ to a template that creates the hyperlink on capture.
+To use this command, first do ‘customize-variable’
+‘org-capture-template’ and assign letter ‘h’ to a template that
+creates the hyperlink on capture.  Optional interactive prefix
+arg just opens the file
+
+(fn &amp;optional OPEN)
 </pre>
       </div>
     </dd>
