--- a/manual/emacspeak_002dspeak.html
+++ b/manual/emacspeak_002dspeak.html
@@ -1142,7 +1142,7 @@ Interactive prefix arg speaks buffer info.
       "index-emacspeak_002dspeak_002dnext_002dpersonality_002dchunk-1"></span>
       <div class="format">
         <pre class=
-        "format">Moves to the front of next personality change and speak it. 
+        "format">Moves to the front of next personality or face change and speak it. 
 </pre>
       </div>
     </dd>
@@ -1674,7 +1674,7 @@ any other key to speak entire sexp.
       "index-emacspeak_002dspeak_002dthis_002dpersonality_002dchunk-1"></span>
       <div class="format">
         <pre class=
-        "format">Speak chunk of text having personality at  point.
+        "format">Speak chunk of text having personality or face at  point.
 </pre>
       </div>
     </dd>
