--- a/manual/index.html
+++ b/manual/index.html
@@ -53,7 +53,7 @@
   <h1 class="settitle c2">Emacspeak User’s Manual — 2nd
   Edition.</h1>
   <p>This manual documents <strong>Emacspeak, The Complete Audio
-  Desktop</strong> and was last updated on July 7,
+  Desktop</strong> and was last updated on July 12,
   2021.</p><span id="SEC_Overview"></span>
   <h2 class="shortcontents-heading">Short Table of Contents</h2>
   <div class="shortcontents">
@@ -8533,25 +8533,29 @@
               <li><a id="toc-Introduction-3" href=
               "emacspeak_002dtransient.html#Introduction-3" name=
               "toc-Introduction-3">12.193.1 Introduction</a></li>
+              <li><a id="toc-Recommended-Customizations" href=
+              "emacspeak_002dtransient.html#Recommended-Customizations"
+              name="toc-Recommended-Customizations">12.193.2
+              Recommended Customizations</a></li>
               <li><a id=
               "toc-Browsing-Contents-Of-transient_002d_002dshow"
               href=
               "emacspeak_002dtransient.html#Browsing-Contents-Of-transient_002d_002dshow"
               name=
-              "toc-Browsing-Contents-Of-transient_002d_002dshow">12.193.2
+              "toc-Browsing-Contents-Of-transient_002d_002dshow">12.193.3
               Browsing Contents Of transient–show</a></li>
               <li>
                 <a id="toc-Emacspeak_002dTransient-Commands" href=
                 "emacspeak_002dtransient.html#Emacspeak_002dTransient-Commands"
                 name=
-                "toc-Emacspeak_002dTransient-Commands">12.193.3
+                "toc-Emacspeak_002dTransient-Commands">12.193.4
                 Emacspeak-Transient Commands</a>
                 <ul class="no-bullet">
                   <li><a id="toc-emacspeak_002dtransient_002dmode"
                   href=
                   "emacspeak_002dtransient.html#emacspeak_002dtransient_002dmode"
                   name=
-                  "toc-emacspeak_002dtransient_002dmode">12.193.3.1
+                  "toc-emacspeak_002dtransient_002dmode">12.193.4.1
                   emacspeak-transient-mode</a></li>
                 </ul>
               </li>
