--- a/manual/emacspeak_002dspeak.html
+++ b/manual/emacspeak_002dspeak.html
@@ -361,10 +361,7 @@ Speak the window contents after scrolling.
     <dt id="index-emacspeak_002dowindow_002dspeak_002dline">
     Command: <strong>emacspeak-owindow-speak-line</strong></dt>
     <dd>
-      <dl compact="compact">
-        <dt><kbd>ESC &lt;select&gt;</kbd></dt>
-        <dd><span id="index-ESC-_003cselect_003e"></span></dd>
-      </dl><span id=
+      <span id=
       "index-emacspeak_002dowindow_002dspeak_002dline-1"></span>
       <div class="format">
         <pre class=
