--- a/manual/emacspeak_002dtransient.html
+++ b/manual/emacspeak_002dtransient.html
@@ -129,6 +129,38 @@ key             binding
 </pre>
       </div>
     </dd>
+  </dl><span id=
+  "emacspeak_002dtransient_002dnext_002dsection"></span>
+  <h4 class="subsubsection">12.193.4.2
+  emacspeak-transient-next-section</h4>
+  <dl>
+    <dt id="index-emacspeak_002dtransient_002dnext_002dsection">
+    Command: <strong>emacspeak-transient-next-section</strong></dt>
+    <dd>
+      <span id=
+      "index-emacspeak_002dtransient_002dnext_002dsection-1"></span>
+      <div class="format">
+        <pre class="format">Next transient section.
+</pre>
+      </div>
+    </dd>
+  </dl><span id=
+  "emacspeak_002dtransient_002dprevious_002dsection"></span>
+  <h4 class="subsubsection">12.193.4.3
+  emacspeak-transient-previous-section</h4>
+  <dl>
+    <dt id=
+    "index-emacspeak_002dtransient_002dprevious_002dsection">
+    Command:
+    <strong>emacspeak-transient-previous-section</strong></dt>
+    <dd>
+      <span id=
+      "index-emacspeak_002dtransient_002dprevious_002dsection-1"></span>
+      <div class="format">
+        <pre class="format">Previous transient section.
+</pre>
+      </div>
+    </dd>
   </dl>
   <hr />
   <div class="header">
