--- a/manual/index.html
+++ b/manual/index.html
@@ -53,7 +53,7 @@
   <h1 class="settitle c2">Emacspeak User’s Manual — 2nd
   Edition.</h1>
   <p>This manual documents <strong>Emacspeak, The Complete Audio
-  Desktop</strong> and was last updated on July 12,
+  Desktop</strong> and was last updated on July 24,
   2021.</p><span id="SEC_Overview"></span>
   <h2 class="shortcontents-heading">Short Table of Contents</h2>
   <div class="shortcontents">
@@ -8557,6 +8557,22 @@
                   name=
                   "toc-emacspeak_002dtransient_002dmode">12.193.4.1
                   emacspeak-transient-mode</a></li>
+                  <li><a id=
+                  "toc-emacspeak_002dtransient_002dnext_002dsection"
+                  href=
+                  "emacspeak_002dtransient.html#emacspeak_002dtransient_002dnext_002dsection"
+                  name=
+                  "toc-emacspeak_002dtransient_002dnext_002dsection">
+                  12.193.4.2
+                  emacspeak-transient-next-section</a></li>
+                  <li><a id=
+                  "toc-emacspeak_002dtransient_002dprevious_002dsection"
+                  href=
+                  "emacspeak_002dtransient.html#emacspeak_002dtransient_002dprevious_002dsection"
+                  name=
+                  "toc-emacspeak_002dtransient_002dprevious_002dsection">
+                  12.193.4.3
+                  emacspeak-transient-previous-section</a></li>
                 </ul>
               </li>
             </ul>
